{
  "version": 4,
  "terraform_version": "1.0.3",
  "serial": 100,
  "lineage": "cc1862a9-a663-378a-9fa5-bffef7a12546",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09e67e426f25ce0d7",
            "arn": "arn:aws:ec2:us-east-1:241482372712:instance/i-07bfdc408556f61d5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07bfdc408556f61d5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ntier",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d2d5c266a29c1263",
            "private_dns": "ip-10-1-0-183.ec2.internal",
            "private_ip": "10.1.0.183",
            "public_ip": "18.207.193.71",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e856755cb5051c51",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-08cf069aa57bc6f65"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04d2bd2e2b645f530",
            "tags": {
              "Name": "webserver1"
            },
            "tags_all": {
              "Name": "webserver1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08cf069aa57bc6f65"
            ]
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_route_table.public_rt",
            "aws_security_group.websg",
            "aws_subnet.subnets",
            "aws_vpc.testvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ntier_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:241482372712:internet-gateway/igw-04848169d8b71f78f",
            "id": "igw-04848169d8b71f78f",
            "owner_id": "241482372712",
            "tags": {
              "Name": "ntier_igw"
            },
            "tags_all": {
              "Name": "ntier_igw"
            },
            "vpc_id": "vpc-0f390b4a9dba0003f"
          },
          "dependencies": [
            "aws_vpc.testvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "publicrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-04848169d8b71f78f",
            "id": "r-rtb-040e42bf2aa76fa071080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-040e42bf2aa76fa07",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ntier_igw",
            "aws_route_table.public_rt",
            "aws_subnet.subnets",
            "aws_vpc.testvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:241482372712:route-table/rtb-0f7413afda4bf404c",
            "id": "rtb-0f7413afda4bf404c",
            "owner_id": "241482372712",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ntier_private_rt"
            },
            "tags_all": {
              "Name": "ntier_private_rt"
            },
            "vpc_id": "vpc-0f390b4a9dba0003f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.testvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:241482372712:route-table/rtb-040e42bf2aa76fa07",
            "id": "rtb-040e42bf2aa76fa07",
            "owner_id": "241482372712",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ntier_public_rt"
            },
            "tags_all": {
              "Name": "ntier_public_rt"
            },
            "vpc_id": "vpc-0f390b4a9dba0003f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.subnets",
            "aws_vpc.testvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-009a40d5e343798da",
            "route_table_id": "rtb-0f7413afda4bf404c",
            "subnet_id": "subnet-0725f17ef601576f7"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.subnets",
            "aws_vpc.testvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-087e3cc2eea2ba849",
            "route_table_id": "rtb-0f7413afda4bf404c",
            "subnet_id": "subnet-0a83c0ec43a8575d5"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.subnets",
            "aws_vpc.testvpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a27709d518ebfdf3",
            "route_table_id": "rtb-0f7413afda4bf404c",
            "subnet_id": "subnet-0b3dbceffe424c2c7"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.subnets",
            "aws_vpc.testvpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d642e86cbc923330",
            "route_table_id": "rtb-0f7413afda4bf404c",
            "subnet_id": "subnet-0c554441eac4d3e2e"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.subnets",
            "aws_vpc.testvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a7a406ce650901db",
            "route_table_id": "rtb-040e42bf2aa76fa07",
            "subnet_id": "subnet-04d2bd2e2b645f530"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.subnets",
            "aws_vpc.testvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-067d6207397933350",
            "route_table_id": "rtb-040e42bf2aa76fa07",
            "subnet_id": "subnet-07cdbff945977a895"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.subnets",
            "aws_vpc.testvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "websg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:241482372712:security-group/sg-08cf069aa57bc6f65",
            "description": "openhttp and ssh",
            "egress": [],
            "id": "sg-08cf069aa57bc6f65",
            "ingress": [],
            "name": "openhttp",
            "name_prefix": "",
            "owner_id": "241482372712",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "websg"
            },
            "tags_all": {
              "Name": "websg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f390b4a9dba0003f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_route_table.public_rt",
            "aws_subnet.subnets",
            "aws_vpc.testvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "websgopenhttp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-2073503479",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08cf069aa57bc6f65",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_route_table.public_rt",
            "aws_security_group.websg",
            "aws_subnet.subnets",
            "aws_vpc.testvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "websgopenssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-3441261378",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08cf069aa57bc6f65",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_route_table.public_rt",
            "aws_security_group.websg",
            "aws_subnet.subnets",
            "aws_vpc.testvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:241482372712:subnet/subnet-04d2bd2e2b645f530",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.0.0/24",
            "id": "subnet-04d2bd2e2b645f530",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "241482372712",
            "tags": {
              "Name": "ntier-web1"
            },
            "tags_all": {
              "Name": "ntier-web1"
            },
            "vpc_id": "vpc-0f390b4a9dba0003f"
          },
          "dependencies": [
            "aws_vpc.testvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:241482372712:subnet/subnet-0725f17ef601576f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.1.0/24",
            "id": "subnet-0725f17ef601576f7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "241482372712",
            "tags": {
              "Name": "ntier-app1"
            },
            "tags_all": {
              "Name": "ntier-app1"
            },
            "vpc_id": "vpc-0f390b4a9dba0003f"
          },
          "dependencies": [
            "aws_vpc.testvpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:241482372712:subnet/subnet-0a83c0ec43a8575d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.2.0/24",
            "id": "subnet-0a83c0ec43a8575d5",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "241482372712",
            "tags": {
              "Name": "ntier-db1"
            },
            "tags_all": {
              "Name": "ntier-db1"
            },
            "vpc_id": "vpc-0f390b4a9dba0003f"
          },
          "dependencies": [
            "aws_vpc.testvpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:241482372712:subnet/subnet-07cdbff945977a895",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.3.0/24",
            "id": "subnet-07cdbff945977a895",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "241482372712",
            "tags": {
              "Name": "ntier-web2"
            },
            "tags_all": {
              "Name": "ntier-web2"
            },
            "vpc_id": "vpc-0f390b4a9dba0003f"
          },
          "dependencies": [
            "aws_vpc.testvpc"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:241482372712:subnet/subnet-0b3dbceffe424c2c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.1.4.0/24",
            "id": "subnet-0b3dbceffe424c2c7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "241482372712",
            "tags": {
              "Name": "ntier-app2"
            },
            "tags_all": {
              "Name": "ntier-app2"
            },
            "vpc_id": "vpc-0f390b4a9dba0003f"
          },
          "dependencies": [
            "aws_vpc.testvpc"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:241482372712:subnet/subnet-0c554441eac4d3e2e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.1.5.0/24",
            "id": "subnet-0c554441eac4d3e2e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "241482372712",
            "tags": {
              "Name": "ntier-db2"
            },
            "tags_all": {
              "Name": "ntier-db2"
            },
            "vpc_id": "vpc-0f390b4a9dba0003f"
          },
          "dependencies": [
            "aws_vpc.testvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "testvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:241482372712:vpc/vpc-0f390b4a9dba0003f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0854d515408f34215",
            "default_route_table_id": "rtb-084459486e191ab0a",
            "default_security_group_id": "sg-0207ad493d9eadef4",
            "dhcp_options_id": "dopt-0da28277a7c3df121",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0f390b4a9dba0003f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-084459486e191ab0a",
            "owner_id": "241482372712",
            "tags": {
              "Name": "ntier"
            },
            "tags_all": {
              "Name": "ntier"
            }
          }
        }
      ]
    }
  ]
}